[gd_scene load_steps=17 format=2]

[ext_resource path="res://Level.gd" type="Script" id=1]
[ext_resource path="res://Player/playerKinematic.tscn" type="PackedScene" id=2]
[ext_resource path="res://Camera/ForwardLookingCamera.tscn" type="PackedScene" id=3]
[ext_resource path="res://HeadCamCollider.gd" type="Script" id=4]
[ext_resource path="res://Camera/CamCollider.tscn" type="PackedScene" id=5]
[ext_resource path="res://Fruehjahrsputz/UI/ParallaxBackground.tscn" type="PackedScene" id=6]
[ext_resource path="res://Datastrings/Lasers.gd" type="Script" id=7]
[ext_resource path="res://Datastrings/LaserOrange.tscn" type="PackedScene" id=8]
[ext_resource path="res://Datastrings/LaserPurple.tscn" type="PackedScene" id=9]
[ext_resource path="res://Tileset/Tileset_Speedware.tres" type="TileSet" id=10]
[ext_resource path="res://Environment/Speedboost/Speedboost.tscn" type="PackedScene" id=11]
[ext_resource path="res://Menus/PauseMenu/PauseMenu.tscn" type="PackedScene" id=12]
[ext_resource path="res://Fruehjahrsputz/UI/ColorIndicator.tscn" type="PackedScene" id=13]
[ext_resource path="res://Fruehjahrsputz/temp_fullspeedMode.tscn" type="PackedScene" id=14]

[sub_resource type="Animation" id=1]

resource_name = "Fullspeed Mode"
length = 1.5
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.8125, 0.0825195, 0.0825195, 0.248627 ), Color( 0.173767, 0.0825195, 0.8125, 0.248627 ), Color( 0.173767, 0.8125, 0.0825195, 0.248627 ) ]
}

[sub_resource type="Animation" id=2]

resource_name = "Fullspeed Mode Stop"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Level" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Player" type="Node" parent="." index="0"]

[node name="player" parent="Player" index="0" instance=ExtResource( 2 )]

[node name="ForwardLookingCamera" parent="Player" index="1" instance=ExtResource( 3 )]

editor/display_folded = true
_sections_unfolded = [ "Transform" ]

[node name="HeadCamCollider" type="Node2D" parent="Player/ForwardLookingCamera" index="2"]

script = ExtResource( 4 )
FIXED_CAMERA = false
CURRENT_ANCHOR = 0

[node name="CamCollider" parent="Player/ForwardLookingCamera/HeadCamCollider" index="0" instance=ExtResource( 5 )]

position = Vector2( 1338.48, -186.5 )
collision_layer = 0
_sections_unfolded = [ "Collision", "Transform", "Visibility" ]
FIXED_CAMERA = false

[node name="CamCollider2" parent="Player/ForwardLookingCamera/HeadCamCollider" index="1" instance=ExtResource( 5 )]

position = Vector2( 1203.92, -201.41 )
collision_layer = 0
_sections_unfolded = [ "Collision", "Transform", "Visibility" ]
FIXED_CAMERA = false

[node name="ParallaxBackground" parent="Player" index="2" instance=ExtResource( 6 )]

[node name="Level" type="Node" parent="." index="1"]

[node name="Lasers" type="Node2D" parent="Level" index="0"]

editor/display_folded = true
position = Vector2( 453.14, -400.15 )
script = ExtResource( 7 )

[node name="LaserOrange" parent="Level/Lasers" index="0" instance=ExtResource( 8 )]

position = Vector2( 381.223, 501.512 )

[node name="LaserBlau" parent="Level/Lasers" index="1" instance=ExtResource( 9 )]

position = Vector2( 66.6215, 488.558 )

[node name="TileMap" type="TileMap" parent="Level" index="1"]

scale = Vector2( 0.5, 0.5 )
mode = 0
tile_set = ExtResource( 10 )
cell_size = Vector2( 128, 128 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 4
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 262137, 0, 0, 262138, 0, 0, 262139, 0, 0, 262140, 0, 0, 262141, 0, 0, 262142, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 196630, 0, 0, 196631, 0, 0, 196632, 0, 0, 196633, 0, 0, 196634, 0, 0, 196635, 0, 0, 196636, 0, 0, 196637, 0, 0, 196638, 0, 0, 196639, 0, 0, 196640, 0, 0, 196641, 0, 0, 196642, 0, 0, 196643, 0, 0, 196644, 0, 0, 196645, 0, 0, 196646, 0, 0, 196647, 0, 0, 196648, 0, 0, 196649, 0, 0, 196650, 0, 0, 196651, 0, 0, 196652, 0, 0, 196653, 0, 0, 196654, 0, 0, 196655, 0, 0, 196656, 0, 0, 196657, 0, 0, 196658, 0, 0, 196659, 0, 0, 196660, 0, 0, 196661, 0, 0, 196662, 0, 0, 196663, 0, 0, 196664, 0, 0, 196665, 0, 0, 196666, 0, 0, 196667, 0, 0, 196668, 0, 0, 196669, 0, 0, 196670, 0, 0, 196671, 0, 0, 196672, 0, 0, 196673, 0, 0, 196674, 0, 0, 196675, 0, 0, 196676, 0, 0, 196677, 0, 0, 196678, 0, 0, 196679, 0, 0, 196680, 0, 0, 196681, 0, 0, 196682, 0, 0, 196683, 0, 0, 196684, 0, 0, 196685, 0, 0, 196686, 0, 0, 196687, 0, 0, 196688, 0, 0, 196689, 0, 0, 196690, 0, 0, 196691, 0, 0, 196692, 0, 0, 196693, 0, 0, 196694, 0, 0, 196695, 0, 0, 196696, 0, 0, 196697, 0, 0, 196698, 0, 0, 196699, 0, 0, 196700, 0, 0, 196701, 0, 0, 196702, 0, 0, 196703, 0, 0, 262160, 0, 0, 262162, 0, 0, 262164, 0, 0, 262166, 0, 0, 262168, 0, 0, 262170, 0, 0, 262172, 0, 0, 262174, 0, 0, 262176, 0, 0, 262178, 0, 0, 262180, 0, 0, 262182, 0, 0, 262184, 0, 0, 262186, 0, 0, 262188, 0, 0, 262190, 0, 0, 262192, 0, 0, 262194, 0, 0, 262196, 0, 0, 262198, 0, 0, 262200, 0, 0, 262202, 0, 0, 262204, 0, 0, 262206, 0, 0, 262208, 0, 0, 262210, 0, 0, 262212, 0, 0, 262214, 0, 0, 262216, 0, 0, 262218, 0, 0, 262220, 0, 0, 262222, 0, 0, 262224, 0, 0, 262226, 0, 0, 262228, 0, 0, 262230, 0, 0, 262232, 0, 0, 262234, 0, 0, 262236, 0, 0, 262238, 0, 0 )
_sections_unfolded = [ "Cell", "Collision", "Material", "Pause", "Transform", "Visibility" ]

[node name="Speedboosters" type="Node2D" parent="Level" index="2"]

editor/display_folded = true

[node name="Speedboost" parent="Level/Speedboosters" index="0" instance=ExtResource( 11 )]

position = Vector2( 1483.11, 133.058 )

[node name="UI" type="Node" parent="." index="2"]

[node name="PauseMenu" parent="UI" index="0" instance=ExtResource( 12 )]

[node name="ColorIndicator" parent="UI" index="1" instance=ExtResource( 13 )]

[node name="FulspeedMode" parent="." index="3" instance=ExtResource( 14 )]

editor/display_folded = true
color = Color( 0.173767, 0.8125, 0.0825195, 0.248627 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="FulspeedMode" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
"anims/Fullspeed Mode" = SubResource( 1 )
"anims/Fullspeed Mode Stop" = SubResource( 2 )
blend_times = [  ]

[connection signal="switched_color_to_orange" from="Player/player" to="." method="_on_player_switched_color_to_orange"]

[connection signal="switched_color_to_purple" from="Player/player" to="." method="_on_player_switched_color_to_purple"]

[connection signal="newCamera" from="Player/ForwardLookingCamera/HeadCamCollider/CamCollider" to="Player/ForwardLookingCamera/HeadCamCollider" method="_on_CamCollider_newCamera"]

[connection signal="newCamera" from="Player/ForwardLookingCamera/HeadCamCollider/CamCollider2" to="Player/ForwardLookingCamera/HeadCamCollider" method="_on_CamCollider_newCamera"]

[connection signal="speedboost_start" from="Level/Speedboosters/Speedboost" to="." method="_on_Speedboost_speedboost_start"]

[connection signal="speedboost_stop" from="Level/Speedboosters/Speedboost" to="." method="_on_Speedboost_speedboost_stop"]


